swagger update + refacto
