# docker/swagger/v1/doc.yaml
@@ -56,24 +56,26 @@ paths:
                     type: boolean
                     description: Indicates if the conversation was create
                     example: true
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 200
                   data:
                     type: object
                     properties:
-                      postId:
+                      conversationId:
                         type: string
                         description: The ID of the conversation
-                        example: con_664c50f9c95cb
-                    description: Data returned by the publication service
-                  message:
-                    type: string
-                    description: Message associated with the response
-                    example: "How can I help you today ?"
-        '400':
-          description: Bad request
+                        example: con_66c58c7ee6c58
+                      numberOfPairs:
+                        type: int
+                        description: The number of pair in the conversation
+                        example: 1
+                      botMessage:
+                        type: string
+                        description: ChatGPT's response.
+                        example: Bonjour! Comment puis-je vous aider aujourd'hui?
+
+                    description: Data returned by the make conversation service
+          
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -83,17 +85,10 @@ paths:
                     type: boolean
                     description: Indicates whether the conversation was created
                     example: false
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 400
-                  data:
-                    type: object
-                    description: Data returned by the conversation service
-                  message:
+                  error:
                     type: string
-                    description: Message associated with the response
-                    example: Invalid request
+                    description: The message error
+                    example: NoIdException
   /conversations/Continue:
     post:
       tags:
@@ -121,7 +116,7 @@ paths:
                   example: GPTModel
 
       responses:
-        '201':
+        '200':
           description: Successful response
           content:
             application/json:
@@ -132,24 +127,24 @@ paths:
                     type: boolean
                     description: Indicates whether the publication was successful
                     example: true
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 200
                   data:
                     type: object
                     properties:
-                      postId:
+                      conversationId:
                         type: string
                         description: The ID of the conversation
-                        example: con_664c50f9c95cb
-                    description: Data returned by the publication service
-                  message:
-                    type: string
-                    description: Message associated with the response
-                    example: "How can I help you today ?"
-        '400':
-          description: Bad request
+                        example: con_66c58c7ee6c58
+                      numberOfPairs:
+                        type: int
+                        description: The number of pair in the conversation
+                        example: 1
+                      botMessage:
+                        type: string
+                        description: ChatGPT's response.
+                        example: Bonjour! Comment puis-je vous aider aujourd'hui?
+                  description: Data returned by the make conversation service
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -159,17 +154,10 @@ paths:
                     type: boolean
                     description: Indicates whether the conversation was created
                     example: false
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 400
-                  data:
-                    type: object
-                    description: Data returned by the conversation service
-                  message:
+                  error:
                     type: string
-                    description: Message associated with the response
-                    example: Invalid request
+                    description: The message error
+                    example: NoIdException
   /conversations/SwitchContext:
     post:
       tags:
@@ -194,7 +182,7 @@ paths:
                 
 
       responses:
-        '201':
+        '200':
           description: Successful response
           content:
             application/json:
@@ -205,18 +193,14 @@ paths:
                     type: boolean
                     description: Indicate whether the context was changed
                     example: true
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 200
                   data:
                     type: object
                     properties:
-                      newId:
+                      contextId:
                         type: string
                         description: The Id of new Context
                         example: con_664c50f9c95cb
-                      conversationId:
+                      conversation:
                         type: string
                         description: The Id of the conversation
                         example: con_664c50f9c95cb
@@ -225,8 +209,8 @@ paths:
                     type: string
                     description: Message associated with the response
                     example: "How can I help you today ?"
-        '400':
-          description: Bad request
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -236,17 +220,10 @@ paths:
                     type: boolean
                     description: Indicates whether the conversation was created
                     example: false
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 400
-                  data:
-                    type: object
-                    description: Data returned by the conversation service
-                  message:
+                  error:
                     type: string
-                    description: Message associated with the response
-                    example: Invalid request
+                    description: The message error
+                    example: NoIdException
   /context/Make:
     post:
       tags:
@@ -276,23 +253,18 @@ paths:
                 properties:
                   success:
                     type: boolean
-                    description: indicate whether the context was created
+                    description: Indicate whether the context was changed
                     example: true
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 200
                   data:
                     type: object
                     properties:
                       contextId:
                         type: string
-                        description: The ID of the context
-                        example: cot_664c50f9c95cb
-                    description: Data returned by the publication service
-                
-        '400':
-          description: Bad request
+                        description: The Id of created Context
+                        example: con_664c50f9c95cb
+                    description: Data returned by the conversation service
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -302,17 +274,10 @@ paths:
                     type: boolean
                     description: Indicates whether the conversation was created
                     example: false
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 400
-                  data:
-                    type: object
-                    description: Data returned by the conversation service
-                  message:
+                  error:
                     type: string
-                    description: Message associated with the response
-                    example: Invalid request
+                    description: The message error
+                    example: EmptyString
   /context/View:
     post:
       tags:
@@ -346,23 +311,19 @@ paths:
                 properties:
                   success:
                     type: boolean
-                    description: indicate whether the context was created
+                    description: Indicate whether the context was changed
                     example: true
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 200
                   data:
                     type: object
                     properties:
-                      contextId:
+                      contextMessage:
                         type: string
-                        description: The ID of the context
-                        example: cot_664c50f9c95cb
-                    description: Data returned by the publication service
-                
-        '400':
-          description: Bad request
+                        description: The context message of id selected
+                        example: I'm a context
+                    description: Data returned by the conversation service
+
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -372,22 +333,15 @@ paths:
                     type: boolean
                     description: Indicates whether the conversation was created
                     example: false
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 400
-                  data:
-                    type: object
-                    description: Data returned by the conversation service
-                  message:
+                  error:
                     type: string
-                    description: Message associated with the response
-                    example: Invalid request          
-  /context/Edit:
+                    description: The message error
+                    example: NoIdException     
+  /contexts:
     put:
       tags:
           - Context
-      summary: Edit a context
+      summary: Modify a context message
       operationId: editContext
       requestBody:
         required: true
@@ -416,27 +370,22 @@ paths:
                 properties:
                   success:
                     type: boolean
-                    description: indicate whether the context was created
+                    description: Indicate whether the context was changed
                     example: true
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 200
                   data:
                     type: object
                     properties:
-                      Id:
+                      contextId:
                         type: string
-                        description: The ID of the context
-                        example: cot_664c50f9c95cb
-                      context:
+                        description: The Id of Context
+                        example: con_664c50f9c95cb
+                      contextMessage:
                         type: string
-                        description: The new message context
-                        example: cot_664c50f9c95cb
-                    description: Data returned by the context service
-                
-        '400':
-          description: Bad request
+                        description: The new message for the context
+                        example: I'm new context
+                    description: Data returned by the conversation service
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -446,17 +395,10 @@ paths:
                     type: boolean
                     description: Indicates whether the conversation was created
                     example: false
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 400
-                  data:
-                    type: object
-                    description: Data returned by the conversation service
-                  message:
+                  error:
                     type: string
-                    description: Message associated with the response
-                    example: Invalid request
+                    description: The message error
+                    example: NoIdException
   /context/Delete:
     post:
       tags:
@@ -487,20 +429,18 @@ paths:
                 properties:
                   success:
                     type: boolean
-                    description: indicate whether the context was created
+                    description: Indicate whether the context was changed
                     example: true
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 200
                   data:
                     type: object
                     properties:
-                      "The context was be deleted"
-                    description: Data returned by the context service
-                
-        '400':
-          description: Bad request
+                      message:
+                        type: string
+                        description: Message explaining whether the context has been removed or not.
+                        example: the context was deleed
+                    
+        '500':
+          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -510,14 +450,7 @@ paths:
                     type: boolean
                     description: Indicates whether the conversation was created
                     example: false
-                  statusCode:
-                    type: integer
-                    description: HTTP status code of the response
-                    example: 400
-                  data:
-                    type: object
-                    description: Data returned by the conversation service
-                  message:
+                  error:
                     type: string
-                    description: Message associated with the response
-                    example: Invalid request
+                    description: The message error
+                    example: NoIdException
